Create Dahsboard for user

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "react": "^16.7.0",
+    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap-sidebar": "^0.0.1",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
