--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "filestack-js": "^1.13.1",
+    "filestack-react": "^2.0.0",
     "jquery": "^3.3.1",
     "js-cookie": "^2.2.0",
     "react": "^16.7.0",
