--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API_URL = http://localhost:8000
+REACT_APP_API_URL = https://servisbos-backend.herokuapp.com
 REACT_APP_FILESTACK_API_KEY = AYX3q68mJRgWq7sa80U2mz
